# TRABALHO_ED

./: .gitignore  AIDocs.md  ARVBP.c  ARVBP.h  CMakeLists.txt  DESC.c  DESC.h  LICENSE  README.md  TARVBM.c  TIM.c  TLSEIM.c  TLSEIM.h  catalogo.csv  extras.c  extras.h  main.c
bibliotecas/: ARVBP.c  TIM.c  TLSEIM.c  extras.c
headers/: ARVBP.h  TIM.h  TLSEIM.h  extras.h
